Fix overflowing talent grid in move popup
This fixes #1455, with hopefully no regressions.

--- a/src/scss/_style.scss
+++ b/src/scss/_style.scss
@@ -1069,6 +1069,10 @@ rzslider, .rzslider {
   margin: 5px 10px;
 }
 
+.talent-grid {
+  max-width: 100%;
+}
+
 .stats {
   width: 100%;
   display: table;
